# PulseNotes

./: README.md  main.py  pyproject.toml
backend/: db.sqlite3
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/: .env  package-lock.json  package.json
frontend/src/: App.tsx  api.js  constants.js
frontend/src/components/: ProtectedRoute.jsx  form.jsx  loadingindicator.jsx  note.jsx
frontend/src/pages/: Home.jsx  NotFound.jsx  login.jsx  register.jsx
