[project]
name = "react-django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.0",
    "python-dotenv>=1.2.2",
]
